--- a/7.3/playwright/.gitignore
+++ b/7.3/playwright/.gitignore
@@ -1,6 +1,6 @@
 /node_modules/
-
-
+user.js
+tests-examples/
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -10,3 +10,6 @@
 
 # Local History for Visual Studio Code
 .history/
+/test-results/
+/playwright-report/
+/playwright/.cache/
