--- a/7.5/puppeteer-2/package.json
+++ b/7.5/puppeteer-2/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^27.3.1",
-    "jest-puppeteer": "^6.0.0",
-    "puppeteer": "^13.3.2",
-    "chai": "^4.3.4",
-    "cucumber": "^7.0.0-rc.0"
+    "chai": "^4.3.8",
+    "cucumber": "^6.0.7",
+    "jest": "^29.7",
+    "jest-puppeteer": "^6.2.0",
+    "puppeteer": "^13.7.0"
+  },
+  "devDependencies": {
+    "@cucumber/cucumber": "^9.5.1"
   }
 }
