--- a/7.6/package.json
+++ b/7.6/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "cypress-test",
+  "name": "jsaqa-live-7",
   "version": "1.0.0",
-  "description": "first tests with Cypress",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cy:run:head:chrome": "cypress run --headed --browser chrome",
+    "cy:run:head:firefox": "cypress run --headed --browser edge",
+    "cy:run:chrome": "cypress run --headless --browser chrome",
+    "cy:run:firefox": "cypress run --headless --browser edge"
   },
-  "author": "OM",
+  "author": "",
   "license": "ISC",
-  "dependencies": {
-    "cypress": "^8.3.0"
-  }
+  "devDependencies": {
+    "cypress": "^13.7.1"
+  },
+  "description": ""
 }
